--- a/photoshare/photoshareTests/photoshareTests-Info.plist
+++ b/photoshare/photoshareTests/photoshareTests-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>Aviary-API-Key</key>
+	<string>c1f4f0ae01276a21</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
