--- a/photoshare/photoshare/photoshare-Info.plist
+++ b/photoshare/photoshare/photoshare-Info.plist
@@ -26,11 +26,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.ignis.photoshare</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb671598942899133</string>
-			</array>
+			<string>123fridaytestapp</string>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
