--- a/photoshare/photoshare/photoshare-Info.plist
+++ b/photoshare/photoshare/photoshare-Info.plist
@@ -29,6 +29,10 @@
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string>com.ignis.photoshare</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb671598942899133</string>
+			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
