--- a/photoshare/photoshare/photoshare-Info.plist
+++ b/photoshare/photoshare/photoshare-Info.plist
@@ -30,9 +30,7 @@
 			<key>CFBundleURLName</key>
 			<string>com.ignis.photoshare</string>
 			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb671598942899133</string>
-			</array>
+			<array/>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
