--- a/photoshare/photoshare/photoshare-Info.plist
+++ b/photoshare/photoshare/photoshare-Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>Aviary-API-Key</key>
 	<string>6f226e3a0e7bc7ce</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
