--- a/photoshare/photoshareTests/photoshareTests-Info.plist
+++ b/photoshare/photoshareTests/photoshareTests-Info.plist
@@ -4,6 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>Aviary-API-Key</key>
 	<string>6f226e3a0e7bc7ce</string>
 	<key>CFBundleExecutable</key>
