changes  EarningView,LoginView,MyRefferal,PhotoShare,ReferStageFour

--- a/photoshare/photoshare/photoshare-Info.plist
+++ b/photoshare/photoshare/photoshare-Info.plist
@@ -68,7 +68,7 @@
 	<key>CFBundleVersion</key>
 	<string>2.0</string>
 	<key>FacebookAppID</key>
-	<string>285933034864798</string>
+	<string></string>
 	<key>FacebookDisplayName</key>
 	<string>123Friday</string>
 	<key>LSApplicationCategoryType</key>
